force-app/main/default/objects/slackv2__Subscription__c/slackv2__Subscription__c.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>