force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Channel_Name__c</fullName>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>