force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Field__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>