force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>