force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>