force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Subscription_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>