force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__Subscription_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Subscription_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Type Lookup</label>
    <referenceTo>slackv2__Subscription_Type__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>