force-app/main/default/objects/slackv2__Subscription__c/fields/slackv2__User__c.field-meta.xml
<CustomField>
    <fullName>slackv2__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>